--- a/YuniClientMobile/AndroidManifest.xml
+++ b/YuniClientMobile/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.yuniclient"
-      android:versionName="6" android:versionCode="6">
+      android:versionCode="7" android:versionName="7">
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
         <activity android:name=".YuniClient"
