--- a/YuniClientMobile/AndroidManifest.xml
+++ b/YuniClientMobile/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.yuniclient"
-      android:versionName="9" android:versionCode="9">
+      android:versionName="10" android:versionCode="10">
     <uses-permission android:name="android.permission.BLUETOOTH" />
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
+    <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".YuniClient"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait">
