--- a/YuniClientMobile/AndroidManifest.xml
+++ b/YuniClientMobile/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.yuniclient"
-      android:versionName="16" android:versionCode="16">
+      package="com.yuni.client"
+      android:versionName="17" android:versionCode="17">
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".YuniClient"
+        <activity android:name="com.yuniclient.YuniClient"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait">
             <intent-filter>
