--- a/YuniClientMobile/AndroidManifest.xml
+++ b/YuniClientMobile/AndroidManifest.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.yuni.client"
-      android:versionName="17" android:versionCode="17">
-    <uses-permission android:name="android.permission.BLUETOOTH" />
+      android:versionName="18" android:versionCode="18">
+    <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name="com.yuniclient.YuniClient"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"></action>
+                <action android:name="android.intent.action.LAUNCHER"></action>
             </intent-filter>
         </activity>
     </application>
    
     <uses-sdk android:minSdkVersion="2" />
-<uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>
 </manifest> 
