--- a/YuniClientMobile/AndroidManifest.xml
+++ b/YuniClientMobile/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.yuni.client"
-      android:versionName="18" android:versionCode="18">
+      android:versionCode="19" android:versionName="19">
     <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>
+    <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name="com.yuniclient.YuniClient"
                   android:label="@string/app_name"
