--- a/YuniClientMobile/AndroidManifest.xml
+++ b/YuniClientMobile/AndroidManifest.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.yuni.client"
-      android:versionCode="20" android:versionName="20">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.yuni.client" android:versionCode="21" android:versionName="21">
     <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>
     <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
