--- a/YuniClientMobile/AndroidManifest.xml
+++ b/YuniClientMobile/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.yuni.client" android:versionCode="26" android:versionName="1.1 Ice-planet">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.yuni.client" android:versionCode="27" android:versionName="1.1 Ice-planet">
     <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>
     <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name="com.yuniclient.YuniClient"
                   android:label="@string/app_name"
@@ -13,5 +14,5 @@
             </intent-filter>
         </activity>
     </application>
-    <uses-sdk android:minSdkVersion="2" />
+    <uses-sdk android:minSdkVersion="5" />
 </manifest> 
