--- a/YuniClientMobile/AndroidManifest.xml
+++ b/YuniClientMobile/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.yuni.client" android:versionCode="27" android:versionName="1.1 Ice-planet">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.yuni.client" android:versionCode="28" android:versionName="1.1 Ice-planet">
     <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>
     <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
@@ -7,7 +7,7 @@
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name="com.yuniclient.YuniClient"
                   android:label="@string/app_name"
-                  android:screenOrientation="portrait">
+                  android:configChanges="orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"></action>
                 <category android:name="android.intent.category.LAUNCHER" />
