--- a/YuniClientMobile/AndroidManifest.xml
+++ b/YuniClientMobile/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.yuni.client" android:versionCode="49" android:versionName="1.2.49 Ice-planet">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.yuni.client" android:versionCode="50" android:versionName="1.2.50 Ice-planet">
     <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>
     <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
@@ -14,6 +14,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.yuniclient.Settings" android:icon="@drawable/icon" android:label="@string/app_name"></activity>
+        <activity android:label="@string/app_name" android:screenOrientation="landscape" android:name="com.yuniclient.Accelerometer" android:icon="@drawable/icon"></activity>
     </application>
     <uses-sdk android:minSdkVersion="5" />
 </manifest>
