--- a/YuniClientMobile/AndroidManifest.xml
+++ b/YuniClientMobile/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.yuni.client" android:versionCode="54" android:versionName="1.3.1.54 Ice-planet">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.yuni.client" android:versionCode="55" android:versionName="1.3.1.55 Ice-planet">
     <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>
     <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
@@ -13,7 +13,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.yuniclient.Settings" android:icon="@drawable/icon" android:label="@string/app_name"></activity>
+        <activity android:name="com.yuniclient.Settings" android:icon="@drawable/icon" android:label="YuniClientMobile - Settings"></activity>
         <activity android:label="@string/app_name" android:screenOrientation="landscape" android:name="com.yuniclient.Accelerometer" android:icon="@drawable/icon"></activity>
     </application>
     <uses-sdk android:minSdkVersion="5" />
