--- a/YuniClientMobile/AndroidManifest.xml
+++ b/YuniClientMobile/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.yuni.client" android:versionName="1.3.1.64 Ice-planet" android:versionCode="64">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.yuni.client" android:versionCode="64" android:versionName="1.4.64 Ice-planet">
     <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>
     <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
